[gd_scene load_steps=9 format=2]

[ext_resource path="res://menus/main-menu/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/icon/setting.png" type="Texture" id=2]
[ext_resource path="res://addons/server-browser/server_browser.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/SafeArea/SafeArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/setting_menu/setting_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/ui/loading/loading.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=8]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenuSafeArea" parent="CanvasLayer" instance=ExtResource( 4 )]
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenuSafeArea"]
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer"]
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
alignment = 2

[node name="setting_menu" type="Button" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer"]
margin_left = 511.0
margin_right = 591.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 0
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer"]
margin_left = 595.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer"]
margin_top = 84.0
margin_right = 600.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 5 )
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer"]
margin_top = 93.0
margin_right = 600.0
margin_bottom = 1024.0
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2"]
margin_left = 72.0
margin_right = 96.0
margin_bottom = 931.0
rect_min_size = Vector2( 24, 0 )

[node name="Control" type="VBoxContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2"]
margin_left = 100.0
margin_right = 500.0
margin_bottom = 931.0
rect_min_size = Vector2( 400, 0 )

[node name="Label" type="Label" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control"]
margin_right = 400.0
margin_bottom = 121.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 8 )
text = "Colony 
Conquest 2"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control"]
margin_top = 125.0
margin_right = 400.0
margin_bottom = 391.0
size_flags_vertical = 3

[node name="loading" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control" instance=ExtResource( 7 )]
margin_top = 395.0
margin_right = 400.0
margin_bottom = 595.0

[node name="main_menu_buttons" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control"]
margin_top = 599.0
margin_right = 400.0
margin_bottom = 847.0

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons"]
margin_right = 400.0
margin_bottom = 248.0
color = Color( 0.117647, 0.117647, 0.117647, 0.917647 )

[node name="main_menu_buttons" type="HBoxContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons"]
margin_right = 400.0
margin_bottom = 248.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons"]
margin_right = 24.0
margin_bottom = 248.0
rect_min_size = Vector2( 24, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons"]
margin_left = 28.0
margin_right = 372.0
margin_bottom = 248.0
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer"]
margin_right = 344.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )

[node name="quickplay" type="Button" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer"]
margin_top = 28.0
margin_right = 344.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 6 )
text = "Quick Play"

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer"]
margin_top = 112.0
margin_right = 344.0
margin_bottom = 136.0
rect_min_size = Vector2( 24, 24 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer"]
margin_top = 140.0
margin_right = 344.0
margin_bottom = 220.0

[node name="host" type="Button" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Host"

[node name="MarginContainer7" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 184.0
margin_bottom = 80.0
rect_min_size = Vector2( 24, 24 )

[node name="join" type="Button" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer/HBoxContainer"]
margin_left = 188.0
margin_right = 344.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Join"

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer"]
margin_top = 224.0
margin_right = 344.0
margin_bottom = 248.0
rect_min_size = Vector2( 24, 24 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons"]
margin_left = 376.0
margin_right = 400.0
margin_bottom = 248.0
rect_min_size = Vector2( 24, 24 )

[node name="bottom_offset" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control"]
margin_top = 851.0
margin_right = 400.0
margin_bottom = 931.0
rect_min_size = Vector2( 0, 80 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2"]
margin_left = 504.0
margin_right = 528.0
margin_bottom = 931.0
rect_min_size = Vector2( 24, 0 )

[node name="menu" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="server_browser" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer/setting_menu" to="." method="_on_setting_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer/quickplay" to="." method="_on_quickplay_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer/HBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuSafeArea/VBoxContainer/HBoxContainer2/Control/main_menu_buttons/main_menu_buttons/VBoxContainer/HBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="on_join" from="CanvasLayer/server_browser" to="." method="_on_server_browser_on_join"]
